# scalpingtrainer

./: .gitignore  DEPLOYMENT.md  Dockerfile  README.md  ai_trading_engine.py  ai_trading_service.py  ai_trading_strategies.py  btc_analysis.py  daily_ohlc.csv  data_feed.py  database.py  docker-compose.yml  exchange_factory.py  exchange_interface.py  halving_analysis.csv  index.html  main.py  models.py  month_mean_logret.csv  monthly_ohlc.csv  monthly_year_month_heat.csv  multi_exchange_data_feed.py  multi_symbol_service.py  package-lock.json  package.json  playwright.config.ts  position_service.py  pyproject.toml  real_trading_service.py  report_service.py  requirements.txt  summary_stats.csv  trade_service.py  trading_config.py  vite.config.js  weekday_mean_logret.csv  weekly_ohlc.csv  yearly_ohlc.csv  개선사항_완료보고서.md  기능정의서.md
.github/workflows/: e2e.yml
config/: rules.json
exchanges/: binance_exchange.py  bybit_exchange.py
scripts/: nginx_example.conf  start_server.cmd
src/: api.js
src/components/: AITradingDashboard.jsx  Chart.jsx  PnLReport.jsx  Settings.jsx  TradePanel.jsx  TradeTable.jsx  TradingJournal.jsx  TradingViewChart.jsx
src/pages/: Dashboard.jsx
src/utils/: format.js
tests/: ai_status_check.py  ai_trading_e2e_test.py  run_e2e_ci.py  ws_ai_trading_tester.html
tests/e2e/: api.spec.ts  chart.spec.ts  utils.ts
